compass : fixed a layout problem which caused an unwanted big h-v scrollability behavior

--- a/src/panels/SlidingPanel/SlidingPanel.css
+++ b/src/panels/SlidingPanel/SlidingPanel.css
@@ -3,7 +3,7 @@
   grid-template-columns : 1fr 3fr;
   grid-template-rows : 1fr;
   background-color : var(--bg);
-  position : absolute;
+  position : fixed;
   transition: left 1s;
   height: calc(100% - var(--navigation-height));
   width : 45%;
